exercises/4.5/solution/app-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-a
  namespace: net45
  labels:
    app: app-a
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-a
  template:
    metadata:
      labels:
        app: app-a
    spec:
      containers:
      - name: nginx
        image: nginx:1.27.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-a-svc
  namespace: net45
spec:
  type: ClusterIP
  selector:
    app: app-a
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
