exercises/4.5/solution/app-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-b
  namespace: net45
  labels:
    app: app-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-b
  template:
    metadata:
      labels:
        app: app-b
    spec:
      containers:
      - name: httpd
        image: httpd:2.4.62
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-b-svc
  namespace: net45
spec:
  type: ClusterIP
  selector:
    app: app-b
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
