exercises/4.5/solution/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop-ingress
  namespace: net45
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: shop.local
    http:
      paths:
      - path: /a
        pathType: Prefix
        backend:
          service:
            name: app-a-svc
            port:
              number: 80
      - path: /b
        pathType: Prefix
        backend:
          service:
            name: app-b-svc
            port:
              number: 80
